# TP1_GR2_Allegro

./: CMakeLists.txt  main.c
